@@ -1,5 +1,7 @@
 2004-09-10  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/munged/replay.c: Removed mac_len from union replay_key
+	  to further reduce storage requirements for replay data.
 	* src/munged/replay.c: Changed struct replay_key to union replay_key
 	  to reduce storage requirements for replay data.
 
